tests/codegen/fail/unsupported_async_spawn_value_library_build.stderr
error: tests/codegen/fail/unsupported_async_spawn_value_library_build.ql:6:16: LLVM IR backend foundation currently only supports `spawn` in statement position
      let task = spawn worker()
                 ^^^^^^^^
